# Flask-Deta

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  app.py  mkdocs.yml  notes.txt  o.py  pyproject.toml  scripts.py  setup.py  test.py
.github/: FUNDING.yml
docs/: LICENSE.md  index.md  requirements.txt
docs/DetaBase/: Base.md
docs/DetaDrive/: Drive.md
docs/Install/: flaskdeta.md  venv.md
docs/QuickStart/: start.md
docs/about/: CHANGELOG.md  LICENSE.md  changelog.md
docs/detabase/: base.md
docs/detadrive/: drive.md
docs/guide/: config.md  install.md  start.md  venv.md
docs/javascripts/: highlight.js
docs/stylesheets/: framer.css
docs/usage/: usage.md
src/flask_deta/: __deta_base.py  __deta_drive.py  __deta_model.py  __deta_setup.py  __init__.py  __model.py  cli.py  deta_base.py  deta_drive.py  deta_model.py  deta_setup.py  model.py  validator.py
tests/: test.py
