[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Flask-Deta"
version = "0.0.1"
authors = [
  { name="jesparzarom", email="jesparzarom@outlook.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/flask-detaspace"
"Bug Tracker" = "https://github.com/pypa/flask-detaspace/issues"
