[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-deta"
version = "0.1.1"
description = "A Python library for seamless integration with DetaSpace in Flask"
authors = [{ name = "J.P. Esparza" }]
maintainers = [{ name = "J.P. Esparza" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["Flask", "deta"]
keywords = [
  "Flask",
  "Flask Package",
  "Flask NoSQL",
  "Fask Deta",
  "Deta",
  "Detaspace",
  "Python Deta",
  "NoSQL",
  "Drive",
  "Databases",
  "Web Development",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: Microsoft",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Framework :: Flask",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[project.urls]
"Homepage" = "https://github.com/Jesparzarom/Flask-Deta"
"Source Code" = "https://github.com/Jesparzarom/Flask-Deta"
"Bug Tracker" = "https://github.com/Jesparzarom/Flask-Deta/issues"
